Improve styling and fix drop gap between tabs

--- a/src/panorama/css/tab.css
+++ b/src/panorama/css/tab.css
@@ -1,58 +1,64 @@
 
-.tab, .newtab {
+.newtab {
 	margin: 4px;
 
-	box-sizing: border-box;
-
-	position: relative;
+	position: relative
 }
 
 .tab {
+	padding: 4px;
+
+	display: block;
+
+	position: relative;
+
+	overflow: hidden;
+}
+
+.tab > div {
+	width: 100%;
+	height: 100%;
+
+	position: relative;
+
 	background-color: var(--color-tab);
 
 	border-radius: 5px;
 
-	outline: 1px solid var(--color-shadow);
+	box-shadow: 0 0 0 1px var(--color-shadow);
 
 	overflow: hidden;
 
 	cursor: default;
 }
 
-/* drag protection */
-.tab::after {
-	content: '';
-
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-
-	z-index: 5;
+.tab:hover > div {
+	box-shadow: 0 0 0 2px var(--color-shadow);
 }
 
-.tab.selected {
-	outline: 2px dashed var(--color-tab-active) !important;
+.tab.active > div {
+	outline: 2px solid var(--color-tab-active);
 }
 
-.tab:hover, .tab.inactive:hover {
-	outline: 2px solid var(--color-tab-hover);
+.tab.selected > div {
+	outline: 1px solid var(--color-tab-active);
+	outline-offset: 1px;
+}
+
+.tab:focus > div {
+	outline: 2px solid var(--color-tab-active);
 }
 
 .tab:focus {
-	outline: 2px solid var(--color-tab-active);
+	outline: none;
 }
 
-.tab.active {
-	outline: 2px solid var(--color-tab-active);
-}
-
-.tab.inactive {
+.tab.inactive > div {
 	opacity: 0.6;
 }
 
-.tab.drag {
+.tab.drag > div {
+	outline: none;
 	opacity: 0.5;
 }
 
